--- a/css/style.css
+++ b/css/style.css
@@ -148,13 +148,23 @@ footer img {
   margin-bottom: 4%;
 }
 .panier-fenetre {
-  height: 123px;
+  height: 400px;
   padding-top: 10px;
   border: #9d9d9d 2px solid;
   margin-top: 1%;
 }
+@media screen and (min-width: 992px) {
+  .panier-fenetre {
+    height: 123px;
+  }
+}
 .panier-fenetre--002 {
-  padding-top: 15px;
+  margin-top: -80px;
+}
+@media screen and (min-width: 992px) {
+  .panier-fenetre--002 {
+    margin-top: 20px;
+  }
 }
 .panier-fenetre--003 {
   text-align: center;
